--- a/06_estructura_de_una_aplicacion_basica.ipynb
+++ b/06_estructura_de_una_aplicacion_basica.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Modificar el archivo *tutorial/tutorial/urls.py* con el siguiente código:\n",
+    "El archivo *src/06/tutorial_urls.py* contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -171,15 +171,42 @@
     "\n",
     "urlpatterns = [path('admin/', admin.site.urls), path('main/', include('main.urls')),]\n",
     "```\n",
-    "* La primera ruta de la lista apunta a la URL *admin/*, ligándola a la función *admin.site.urls*.\n",
-    "* La segunda ruta de la lista punta a la URL *main/*, indicando que debe de importarse el módulo *main.urls*."
+    "La primera ruta de la lista apunta a la URL *admin/*, ligándola a la función *admin.site.urls*.\n",
+    "La segunda ruta de la lista punta a la URL *main/*, indicando que debe de importarse el módulo *main.urls*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En vista de la referencia en el archivo *tutorial/tutorial/urls.py* es necesario crear el archivo *tutorial/main/urls.py* con el siguiente código:\n",
+    "* Se sustituirá el archivo *tutorial/tutorial/urls.py* por el archivo *src/tutorial_urls.py*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/06/tutorial_urls.py tutorial/tutorial/urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/tutorial/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En vista de que *tutorial/tutorial/urls.py* cargará como módulo el contenido de*tutorial/main/urls.py* es necesario que el archivo de referencia exista.\n",
+    "\n",
+    "El archivo *src/06/main_urls.py* contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.urls import path\n",
@@ -187,11 +214,30 @@
     "\n",
     "urlpatterns = [path('', views.index, name=\"inicio\"), path('calif', views.calificaciones)]\n",
     "```\n",
-    "* Se importa la función *django.urls.path*.\n",
-    "* Se importa el módulo *views* localizado en el mismo directorio donde se encuentra el archivo *tutorial/main/urls.py*. \n",
+    "\n",
+    "Este código indica lo siguiente: \n",
+    "\n",
+    "* Importar la función *django.urls.path*.\n",
+    "* Importar el módulo *views* localizado en el mismo directorio donde se encuentra el archivo *tutorial/main/urls.py*. \n",
     "* La lista *urlpatterns* definen dos rutas:\n",
     "   * La ruta del subdirectorio *main/*, la cual se denota por una cadena de caracteres vacía (*''*), ligándola a la función *views.index*.\n",
     "   *    * La ruta del subdirectorio *main/calif*, la cual se denota por una cadena de caracteres *\"inicio\"*, ligándola a la función *views.calif*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda copiará el archivo *src/06/main_urls.py* como *tutorial/main/urls.py*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/06/main_urls.py tutorial/main/urls.py"
    ]
   },
   {
@@ -242,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Modifique el archivo *tutorial/main/views.py* de tal forma que contenga lo siguiente:\n",
+    "El archivo *src/06/views.py* contiene lo siguiente:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -253,8 +299,39 @@
     "\n",
     "def calificaciones(request):\n",
     "    pass\n",
-    "```\n",
-    "* Inicie el servidor de *Django*."
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Copie el archivo *src/06/views.py* sustituyendo al archivo *tutorial.main.views.py*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/06/views.py tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inicie el servidor de *Django* del proyecto *tutorial*."
    ]
   },
   {
