--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "* El estado de estos objetos contiene información acerca de la petición formulada desde un cliente.\n",
     "* Además, estos objetos cuentan con métodos que nos permiten facilitar el manejo de las peticiones.\n",
-    "* *Django* ingresa a estos objetos como argumento para las funciones de vista."
+    "* *Django* ingresa un objeto *request* como el primer argumento de una función de vista."
    ]
   },
   {
@@ -103,10 +103,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los objetos instanciados de *django.http.HttpResponse*.\n",
+    "## La clase *django.http.HttpResponse*.\n",
     "\n",
-    "* Las funciones de vista deben de regresar objetos instanciados de *django.http.HttpResponse*.\n",
-    "* Dichos objetos son enviados al cliente como una respuesta a la petición cuyo objeto *request* fue usado como argumento. \n",
+    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, todas estas respuestas son objetos instanciados de la clase *django.http.HttpResponse*\n",
+    "\n",
+    "Las funciones de vista deben de regresar objetos instanciados de dicha clase.\n",
     "\n",
     "```\n",
     "django.http.HttpResponse(<contenido>)\n",
@@ -139,10 +140,9 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El archivo *tutorial/main/views.py*  contiene las funciones de vista:\n",
-    "\n",
-    " * *index()*,  la cual crea y regresa un objeto instanciado de *django.http.HttpResponse*.\n",
-    " * *calificaciones()* la cual regresa *None*."
+    "El archivo *tutorial/main/views.py*  contiene las funciones de vista:\n",
+    "* *index()*,  la cual crea y regresa un objeto instanciado de *django.http.HttpResponse*.\n",
+    "* *calificaciones()* la cual regresa *None*."
    ]
   },
   {
@@ -158,14 +158,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Modificar la función *calificaciones()* para que regrese algún componente del objeto *request*, en este caso, el método usado por el cliente.\n",
-    "\n",
-    "Sustituyendo:\n",
+    "El siguiente código modifica a la función *calificaciones()* para que regrese algún componente del objeto *request*, en este caso, el método usado por el cliente.\n",
     "    \n",
-    "```\n",
+    "``` python\n",
     "def calificaciones(request):\n",
     "    return HttpResponse(request.method)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo *src/07/views.py* contiene el código con la función *calificaciones()* modificada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat src/07/views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sustituirá al archivo *tutorial/main/views.py* por el archivo *src/07/views.py*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/07/views.py tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Inicie el servidor."
    ]
   },
   {
