--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -148,16 +148,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo de configuración para dos bases de datos.\n",
+    "**Ejemplo:**\n",
     "\n",
-    "La siguiente configuración que debe de sustituir a la que se encuentra en el archivo *tutorial/tutorial/settings.py* define dos conexiones a bases de datos:\n",
-    "* *'default'* corresponde a:\n",
-    "   * Una conexión a un gestor de  base de datos *SQLite*.\n",
-    "   * El archivo con la base da datos se localiza en *tutorial/db.sqlite3*.\n",
-    "* *'pythonista'* corresponde a: \n",
-    "    * Una conexión a un gestor base de datos *MySQL* utilizando *mysql.connector* como *engine*.\n",
-    "    * Define al usuario *root* con la contraseña *0p3n5t4ck*.\n",
-    "    * Define a la base de datos con nombre *db_django* .\n",
+    "La siguiente configuración define una conexión al gestor de bases de datos MySQL con identificador *default*.\n",
+    "* La utiliza *mysql.connector* como *engine*.\n",
+    "* Define al usuario *root* con la contraseña *0p3n5t4ck*.\n",
+    "* Define a la base de datos con nombre *db_django* .\n",
     "    \n",
     "**Nota:** En caso de que la contraseña del usuario *root* de MySQL sea distinta de *0p3n5t4ck*, sustitúyala donde corresponda."
    ]
@@ -177,6 +173,38 @@
     "                'PORT': 3306},\n",
     "}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo *src/08/settings.py* contiene las modificaciones indicadas previamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sustituirá al archivo *tutorial/tutorial/settings.py* con el archivo *src/08/settings.py*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp src/08/settings.py tutorial/tutorial/settings.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -313,22 +341,6 @@
    "outputs": [],
    "source": [
     "! ./manage.py migrate --database=default"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Se hará la sincronización de la configuración con identificador *pythonista*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! ./manage.py migrate --database=pythonista"
    ]
   },
   {
