--- a/09_modelos.ipynb
+++ b/09_modelos.ipynb
@@ -40,7 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.db.models.Model*."
+    "## La clase *django.db.models.Model*.\n",
+    "\n",
+    "La clase *django.db.models.Model* es la superclase a partir de la cual se pueden diseñar los modelos de Django."
    ]
   },
   {
@@ -93,9 +95,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Asignación de mombres de los campos de una tabla con respecto a los atributos de una clase.\n",
+    "\n",
+    "Al crear una clase con "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Los archivos *models.py*.\n",
     "\n",
-    "Estos archivos son los indicados por *Django* para la definiciónde modelos."
+    "Estos archivos son los indicados por *Django* para la definición de modelos."
    ]
   },
   {
@@ -109,19 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "from django.db import models\r\n",
-      "\r\n",
-      "# Create your models here.\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cat tutorial/main/models.py"
    ]
@@ -130,7 +131,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definición de un modelo ilustrativo."
+    "## Definición de un modelo ilustrativo.\n",
+    "\n",
+    "El archivo *src/09/models.py* contiene el siguiente código, el cual define a la clase *Alumno*, la cual es subclase de *django.db.models.Model*.\n",
+    "\n",
+    "La clase *Alumno* cuenta con los atributos:\n",
+    "\n",
+    "* *numero_de_cuenta*, el cual es un entero positivo que debe de ser único en la tabla.\n",
+    "* *nombre*, el cual es una cadena de 50 caracteres como máximo.\n",
+    "* *primer_apellido*, el cual es una cadena de 50 caracteres como máximo.\n",
+    "* *segundo_apellido*, el cual es una cadena de 50 caracteres como máximo.\n",
+    "* *carrera*, el cual es una cadena de 20 caracteres como máximo.\n",
+    "* *promedio*, el cual es un número de tipo flotante.\n",
+    "* *al_correinte*, el cual es un booleano."
    ]
   },
   {
@@ -138,9 +151,24 @@
    "metadata": {},
    "source": [
     "``` python\n",
+    "from django.db import models\n",
+    "\n",
     "class Alumno(models.Model):\n",
-    "    \n",
-    "\n"
+    "    numero_de_cuenta = models.PositiveIntegerField(unique=True)\n",
+    "    nombre = models.CharField(max_length=50)\n",
+    "    primer_apellido = models.CharField(max_length=50)\n",
+    "    segundo_apellido = models.CharField(max_length=50)\n",
+    "    carrera = models.CharField(max_length=20)\n",
+    "    promedio = models.FloatField()\n",
+    "    al_corriente = models.BoolField()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sutituirá al archivo *tutorial/main/models.py* con el archivo *src/09/models.py*."
    ]
   },
   {
@@ -148,21 +176,175 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!cp src/09/models.py tutorial/main/models.py"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%cat tutorial/main/models.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inclusión de modelos en la configuración.\n",
+    "\n",
+    "Para que un archivo *models.py* pueda ser incluido por *Django*, es necesario indicar su localización en la lista *INSTALLED_APPS* del archivo *settings.py* correspondiente como si se tratara de un módulo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "El archivo *src/09/settings.py* incluye la cadena *'main\"* en la lista *INSTALLED_APPS* de la siguiente forma:\n",
+    "\n",
+    "``` python\n",
+    "INSTALLED_APPS = [\n",
+    "    'django.contrib.admin',\n",
+    "    'django.contrib.auth',\n",
+    "    'django.contrib.contenttypes',\n",
+    "    'django.contrib.sessions',\n",
+    "    'django.contrib.messages',\n",
+    "    'django.contrib.staticfiles',\n",
+    "    'main',\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sustituye al archivo *tutorial/tutorial/settings.py* con el archivo *src/09/settings.py*."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!cp src/09/settings.py tutorial/tutorial/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Lo cual se ve reflejado de la siguiente manera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tutorial.tutorial.settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.INSTALLED_APPS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conciliación de los modelos con la base de datos.\n",
+    "\n",
+    "El comando ```manage.py makemigrations``` permite conciliar las estructuras de los modelos definidos con la estructura de tablas de la base de datos de *Django*.\n",
+    "\n",
+    "Este comando creará diversos archivos de Python en el subdirectorio *migrations* de la aplicación.\n",
+    "\n",
+    "Una vez conciliadas, los cambios se apicarán mendiante el comando ```manage.py migrate```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "Se realizará la conciliación del modelo definido en la aplicación *main* en el proyecto *tutorial*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "! ./manage.py makemigrations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ls main/migrations/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ./manage.py migrate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql sqlite:///tutorial/db.sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SELECT * from Alumno;"
+   ]
   },
   {
    "cell_type": "markdown",
