--- a/10_urls_y_respuestas_especiales.ipynb
+++ b/10_urls_y_respuestas_especiales.ipynb
@@ -8,11 +8,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Patrones de URL que obtienen datos. "
+   ]
   },
   {
    "cell_type": "code",
@@ -26,7 +26,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   },
   {
    "cell_type": "code",
