--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -163,9 +163,7 @@
    "metadata": {},
    "source": [
     "``` python\n",
-    "DATABASES = {'default': {'ENGINE': 'django.db.backends.sqlite3',\n",
-    "             'NAME': '/opt/pythonista/py231/tutorial/db.sqlite3'},\n",
-    " 'pythonista': {'ENGINE': 'mysql.connector.django',\n",
+    "DATABASES = {'default': {'ENGINE': 'mysql.connector.django',\n",
     "                'NAME': 'db_django',\n",
     "                'USER': 'root',\n",
     "                'PASSWORD': '0p3n5t4ck',\n",
@@ -201,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%cat tutorial/tutorial/settings.py"
