--- a/09_modelos.ipynb
+++ b/09_modelos.ipynb
@@ -316,34 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! ./manage.py migrate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%sql sqlite:///tutorial/db.sqlite3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%sql SELECT * from Alumno;"
+    "! ./manage.py migrate --database=default"
    ]
   },
   {
