--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -284,6 +284,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SHOW DATABASES;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,11 +302,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%%sql \n",
     "CREATE DATABASE db_django;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SHOW DATABASES;"
    ]
   },
   {
