--- a/08_configuracion_de_bases_de_datos.ipynb
+++ b/08_configuracion_de_bases_de_datos.ipynb
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install ipython-sql mysql"
+    "! pip install ipython-sql"
    ]
   },
   {
