--- a/09_modelos.ipynb
+++ b/09_modelos.ipynb
@@ -199,6 +199,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tutorial.tutorial.settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "settings.INSTALLED_APPS"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -247,16 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tutorial.tutorial.settings as settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.INSTALLED_APPS"
+    "%cat tutorial/tutorial/settings.py"
    ]
   },
   {
