--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIA:** Para poder ejecutar correctamente las celdas de esta notebook, es necesario: \n",
-    "* Haber creado el proyecto de la notebook [*02_introduccion_a_django.ipynb*](02_introduccion_a_django.ipynb) localizado en el directorio *tutorial*.\n",
-    "* Haber ejecutado todas las celdas de la notebook [*06_estructura_de_una_aplicacion_basica.ipynb*](06_estructura_de_una_aplicacion_basica.ipynb)."
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
    ]
   },
   {
