--- a/10_gestion_de_urls.ipynb
+++ b/10_gestion_de_urls.ipynb
@@ -11,16 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las bibliotecas de recursos contenidos en los paquetes *django.urls* y *django http* son muy extensas y capaces de ofrecer funcionalidades especializadas que permiten desarrollar servicios web avanzados.\n",
+    "Las bibliotecas de recursos contenidos en los paquetes *django.urls* y *django.http* son muy extensas y capaces de ofrecer funcionalidades especializadas que permiten desarrollar servicios web avanzados.\n",
     "\n",
-    "A continuación se estudiar;an algunas de ellas."
+    "A continuación se estudiarán algunas de ellas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtención de datos a partir de una URL. \n",
+    "## Obtención de datos a partir de una URL.\n",
     "\n",
     "Previamente se estudió la funcionalidad básica de *django.urls.path()* realizando las siguientes operaciones:\n",
     "\n",
@@ -50,7 +50,9 @@
    "source": [
     "### Tipos de datos identificables en una URL:\n",
     "\n",
-    "* "
+    "* string\n",
+    "* int\n",
+    "*"
    ]
   },
   {
