--- a/11_json_con_django.ipynb
+++ b/11_json_con_django.ipynb
@@ -174,43 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La función *flask. jsonify()*.\n",
-    "\n",
-    "El paquete *flask* incluye a la función *jsonify()*, el cual permite enviar datos basados en JSON en formato binario a partir de un objeto de Python.\n",
-    "\n",
-    "Dicha función sólo puede funcionar dentro del contexto de una aplicación de *flask*.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**\n",
-    "\n",
-    "La siguiente celda levantará un servicio web simple el cual convertirá en un mensaje JSON a un objeto de tipo *dict* y lo desplegará en [http://localhost:5000](http://localhost:5000).\n",
-    "\n",
-    "**Advertencia:** Una vez ejecutada la siguiente celda, es necesario interrumpir el kernel de Jupyter para poder ejecutar el resto de las celdas de la notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flask import Flask, jsonify\n",
-    "\n",
-    "app = Flask(__name__)\n",
-    "\n",
-    "@app.route('/')\n",
-    "def inicio():\n",
-    "    return jsonify({'Nombre': 'Juan', \n",
-    "        'Primer Apellido': 'Pérez', \n",
-    "        'Segundo Apellido': None})\n",
-    "\n",
-    "#Si no se define el parámetro host, flask sólo será visible desde localhost\n",
-    "# app.run(host='localhost')\n",
-    "app.run(host='0.0.0.0')"
+    "## La función *django.http.JsonResponse*."
    ]
   },
   {
