--- a/10_gestion_de_urls.ipynb
+++ b/10_gestion_de_urls.ipynb
@@ -60,7 +60,7 @@
     "* *string*: es el tipo de datos por defecto y corresponde a una cadena de caracteres.\n",
     "* *int*: corrsponde a un número entero positivo, incluyendo al cero.\n",
     "* *slug*: es una combinación de caracteres ASCII, guiones medios (-) y guiones bajos (\\_)\n",
-    "* *UUID*: para las secuencias que se apegan al [RFC 4122](https://tools.ietf.org/html/rfc4122.html).\n",
+    "* *uuid*: para las secuencias que se apegan al [RFC 4122](https://tools.ietf.org/html/rfc4122.html).\n",
     "* *path*: captura el segmento de la URL incluyendo las diagonales (*/*)."
    ]
   },
@@ -92,14 +92,14 @@
     "\n",
     "urlpatterns = [path('', views.index, name=\"inicio\"), \n",
     "               path('calif', views.calificaciones),\n",
-    "               re_path(r'^claves/(?P<clave>^([0-9]{4})$'), views.clave),\n",
+    "               re_path(r'^claves/(?P<clave>[0-9]{4}$)', views.clave),\n",
     "               path('claves/<int:numero>', views.numero),\n",
     "               path('claves/<str:nombre>', views.saluda),]\n",
     "```\n",
     "\n",
-    "* En caso de que se ingrese una URL con exatamente 4 dígitos después de *...main/claves/*, se ejecutará la función *views.clave* y se enviarán los 4 dígitos como segundo argumento.\n",
-    "* En caso de que se ingrese una URL con números que no sean de 4 dígitos dígitos después de *...main/claves/*, se ejecutará la función *views.numero* y se enviará el número entero como segundo argumento.\n",
-    "* En caso de que se ingrese una URL con algo que no cumpla las condiciones previas después de *...main/claves/*, se ejecutará la función *views.saluda* y se enviará el contenido como segundo argumento."
+    "* En caso de que se ingrese una URL con exatamente 4 dígitos después de *...main/claves/*, se ejecutará la función *views.clave()* y se enviarán los 4 dígitos como segundo argumento.\n",
+    "* En caso de que se ingrese una URL con números que no sean de 4 dígitos dígitos después de *...main/claves/*, se ejecutará la función *views.numero()* y se enviará el número entero como segundo argumento.\n",
+    "* En caso de que se ingrese una URL con algo que no cumpla las condiciones previas después de *...main/claves/*, se ejecutará la función *views.saluda()* y se enviará el contenido como segundo argumento."
    ]
   },
   {
@@ -150,7 +150,7 @@
     "\n",
     "\n",
     "def saluda(request, nombre):\n",
-    "    return HttpResponse('<h1>Introdujiste el número: {}</h1>'.format(nombre))\n",
+    "    return HttpResponse('<h1>¡Hola, {}!</h1>'.format(nombre))\n",
     "```"
    ]
   },
