--- a/04_preparacion_del_entorno_de_prueba.ipynb
+++ b/04_preparacion_del_entorno_de_prueba.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El comando mágico de Jupyter *%pycat* permite ver el contenido de un archivo de Python en una ventana del navegador.\n",
+    "* El comando mágico de Jupyter *%cat* permite ver el contenido de un archivo.\n",
     "* La siguiente celda desplegará el contenido del archivo *tutorial/tutorial/settings.py*\n"
    ]
   },
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat tutorial/tutorial/settings.py"
+    "%cat tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -55,9 +55,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La base de datos del proyecto.\n",
+    "### La base de datos por defecto de un proyecto.\n",
     "\n",
-    "En el caso del proyecto actual, se utilizará [SQLite](https://www.sqlite.org/index.html) y el archivo correspondiente a la base de datos se localiza en *tutoria/db.sqlite3*.\n",
+    "Para este proyecto se ha creado el archivo *tutoria/db.sqlite3*, el cual orreposnde a una base de datos de [SQLite](https://www.sqlite.org/index.html).\n",
     "\n",
     "Para saber más sobre SQLite, es posible consultar el tutorial localizado en http://www.sqlitetutorial.net/."
    ]
