--- a/05_mvc_mvt_y_api_rest.ipynb
+++ b/05_mvc_mvt_y_api_rest.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "### *Modelo*.\n",
     "\n",
-    "El Modelo corresponde a la estructura de datos de la aplicación, la cual por lo general es gestionada por una base de datos y puede ser ligada a una estructura orientada a objetos mediante un Modelo Relacional de Objetos (ORM por sus siglas en inglés). \n",
+    "El Modelo corresponde a la estructura de datos de la aplicación, la cual por lo general es gestionada por una base de datos y puede ser ligada a una estructura orientada a objetos mediante un Modelo Relacional de Objetos (*ORM* por sus siglas en inglés). \n",
     "\n",
     "El estado de una aplicación se refleja en el modelo, mientras que las vistas y los controladores son interfaces que permiten interactuar con el modelo."
    ]
@@ -37,7 +37,7 @@
    "source": [
     "### *Controlador*.\n",
     "\n",
-    "Los controladores son gestores de eventos, los cuales tienen la capacidad de cambiar el estado del Modelo."
+    "Los controladores son gestores de eventos, los cuales tienen la capacidad de cambiar el estado del modelo."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "### *Vista*.\n",
     "\n",
-    "La vista es el modo en el que el estado del Modelo es presentado al usuario. "
+    "La vista es el modo en el que el estado del modelo es presentado al usuario. "
    ]
   },
   {
@@ -62,11 +62,11 @@
    "source": [
     "En el caso de *Django*, se utiliza la arquitectura *MVT*, en la que:\n",
     "* El *Modelo* está ligado a un *ORM*.\n",
-    "  * Cada modelo de Django es una subclase de la clase *django.db.models.Model*.\n",
-    "  * Un modelo por lo general corresponde a una tabla de la base de datos.\n",
+    "  * Cada modelo de *Django* es una subclase de la clase *django.db.models.Model*.\n",
+    "  * Un modelo está ligado generalmente a una tabla de una base de datos.\n",
     "  * Un registro de la tabla corresponde una instancia de un modelo.\n",
-    "  * Los atributos de un objeto corresponden a un campo de un campo. \n",
-    "* Las *Vistas* hacen la vez del controlador y gestionan todas las reglas de negocio.\n",
+    "  * Los atributos de un objeto corresponden a un campo de un registro. \n",
+    "* Las *Vistas* hacen la vez del controlador y gestionan todas las reglas de negocio por medio de funciones.\n",
     "* Las *Plantillas* (Templates), se encargan de presentar una interfaz al usuario."
    ]
   },
