--- a/06_estructura_de_una_aplicacion_basica.ipynb
+++ b/06_estructura_de_una_aplicacion_basica.ipynb
@@ -88,12 +88,15 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo  *tutorial/tutorial/urls.py* contiene la siguiente línea:\n",
+    "El archivo  *tutorial/tutorial/urls.py* contienes la siguientes líneas:\n",
     "\n",
     "``` python\n",
+    "from django.contrib import admin\n",
+    "from django.urls import include, path\n",
+    "\n",
     "urlpatterns = [path('admin/', admin.site.urls),]\n",
     "```\n",
-    "La lista *urlpatterns* contiene sólo una función *django.urls.path()*, la cual indica que al acceder a la ruta que contenga el patrón *admin/*  se invoque al objeto *admin.site.urls*"
+    "La lista *urlpatterns* contiene sólo una función *django.urls.path()*, la cual indica que al acceder a la ruta que contenga el patrón *admin/*  se invoque a la función *admin.site.urls()*."
    ]
   },
   {
@@ -102,7 +105,7 @@
    "source": [
     "### El paquete *django.urls*.\n",
     "\n",
-    "Este paquete contiene funciones que permiten identificar URLs específicas y ligarlas con algún objeto."
+    "Este paquete contiene funciones que permiten identificar URLs específicas y ligarlas con alguna función."
    ]
   },
   {
@@ -171,7 +174,7 @@
     "\n",
     "urlpatterns = [path('admin/', admin.site.urls), path('main/', include('main.urls')),]\n",
     "```\n",
-    "La primera ruta de la lista apunta a la URL *admin/*, ligándola a la función *admin.site.urls*.\n",
+    "La primera ruta de la lista apunta a la URL *admin/*, ligándola a la función *admin.site.urls()*.\n",
     "La segunda ruta de la lista punta a la URL *main/*, indicando que debe de importarse el módulo *main.urls*."
    ]
   },
@@ -188,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/06/tutorial_urls.py tutorial/tutorial/urls.py"
+    "%cp src/06/tutorial_urls.py tutorial/tutorial/urls.py"
    ]
   },
   {
@@ -217,11 +220,11 @@
     "\n",
     "Este código indica lo siguiente: \n",
     "\n",
-    "* Importar la función *django.urls.path*.\n",
+    "* Importar la función *django.urls.path()*.\n",
     "* Importar el módulo *views* localizado en el mismo directorio donde se encuentra el archivo *tutorial/main/urls.py*. \n",
     "* La lista *urlpatterns* definen dos rutas:\n",
-    "   * La ruta del subdirectorio *main/*, la cual se denota por una cadena de caracteres vacía (*''*), ligándola a la función *views.index*.\n",
-    "   *    * La ruta del subdirectorio *main/calif*, la cual se denota por una cadena de caracteres *\"inicio\"*, ligándola a la función *views.calif*."
+    "   * La ruta del subdirectorio *main/*, la cual se denota por una cadena de caracteres vacía (*''*), ligándola a la función *views.index()*.\n",
+    "   *    * La ruta de *main/calif*, la cual se denota por una cadena de caracteres *\"calif\"*, ligándola a la función *views.calificaciones()*."
    ]
   },
   {
