--- a/16_las_plantillas_de_django.ipynb
+++ b/16_las_plantillas_de_django.ipynb
@@ -470,15 +470,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El módulo *django.shortcuts*."
+    "## El módulo *django.shortcuts*.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/topics/http/shortcuts/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
