--- a/12b_cliente.ipynb
+++ b/12b_cliente.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd .."
+    "from requests import post, get"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/12/urls.py tutorial/main/urls.py "
+    "respuesta_get = get(\"http://localhost:5000/main/error\")"
    ]
   },
   {
@@ -31,12 +31,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/12/views.py tutorial/main/views.py "
+    "respuesta_get.status_code"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_get.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -45,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutorial"
+    "datos = {\"nombre\": \"Juan\",\"primer_apellido\": \"Pérez\",  \"segundo_apellido\":\"Sánchez\",\n",
+    "        \"carrera\": \"Medicina\", \"semestre\": 7, \"promedio\": 8.9, \"al_corriente\": True}"
    ]
   },
   {
@@ -54,16 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://localhost:5000/main/error\n",
-    "\n",
-    "http://localhost:5000/main/otro_error"
+    "respuesta_post = post(\"http://localhost:5000/main/contenido\", data=datos)"
    ]
   },
   {
@@ -72,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from django import http"
+    "respuesta_post.status_code"
    ]
   },
   {
@@ -81,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(http)"
+    "respuesta_post.json()"
    ]
   },
   {
