--- a/13_operaciones_con_modelos.ipynb
+++ b/13_operaciones_con_modelos.ipynb
@@ -12,7 +12,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://docs.djangoproject.com/en/2.1/topics/db/queries/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from django.conf import settings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tutorial.main.models import Alumno"
+   ]
   },
   {
    "cell_type": "code",
